--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 					<!-- NAVIGATION -->
 					<nav class="pagination is-centered">
 						<ul class="pagination-list">
+							<!-- <li><button class="pagination-link button is-small is-primary">1</button></li>
+							<li><button class="pagination-link button is-small">2</button></li>
+							<li><button class="pagination-link button is-small">3</button></li>
+							<li><button class="pagination-link button is-small">4</button></li> -->
 						</ul>
 					</nav>
 				</section>
